# digital-assistant

./: .gitignore  Dockerfile  README.md  app.sh  launch.sh  main.py  pyproject.toml
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
.streamlit/: config.toml
digital_assistant/: launch.sh
digital_assistant/agents/: base_agent.py  query_retriever.py
digital_assistant/agents/impl/: __init__.py  chitchat_agent.py  intake_agent.py  intent_classifier.py  knowledge_agent.py
digital_assistant/db/: __init__.py  assistant_db.py  base.py
digital_assistant/etl/: data_transformer.py
digital_assistant/evals/: Sample_Q&A.csv  test_imdb_eval.py
digital_assistant/logs/: logger.py
digital_assistant/ui/: app.py
digital_assistant/utils/: __init__.py  common_utils.py  constants.py
