[project]
name = "digital-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.8",
    "deepeval>=3.2.3",
    "duckduckgo-search>=8.0.2",
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.27",
    "langgraph>=0.4.7",
    "pandas>=2.2.3",
    "rank-bm25>=0.2.2",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.1",
]
[tool.pytest.ini_options]
pythonpath = ["."]
